[gd_scene load_steps=11 format=3 uid="uid://bu3kvc2qxcq2w"]

[ext_resource type="Script" uid="uid://uw563shloq3m" path="res://scripts/combat/level.gd" id="1_yuxmn"]
[ext_resource type="MeshLibrary" uid="uid://dafu2fhhlqvso" path="res://scenes/libraries/LIB_GridMapMeshLibrary.gltf" id="2_cx077"]
[ext_resource type="MeshLibrary" uid="uid://bqe8w1f2rn5eb" path="res://scenes/libraries/OccupancyMeshLibrary.tres" id="3_cx077"]
[ext_resource type="MeshLibrary" uid="uid://cf7mu0h5aey6v" path="res://scenes/libraries/LIB_MovementGridSimplification.gltf" id="3_ks0nw"]
[ext_resource type="MeshLibrary" uid="uid://bn03h5wqjx55b" path="res://scenes/libraries/TriggerMeshLibrary.tres" id="4_cx077"]
[ext_resource type="MeshLibrary" uid="uid://dan04754q5nkc" path="res://scenes/libraries/MovementMapLibrary.tres" id="4_dypiu"]
[ext_resource type="Environment" uid="uid://dupp65trea8t0" path="res://art/Environment/WE_DefaultEnvironment.tres" id="5_yex0l"]
[ext_resource type="Texture2D" uid="uid://chmtlewxvxl6h" path="res://art/textures/Cursors.png" id="6_8a3vg"]
[ext_resource type="PackedScene" uid="uid://bmb7trymiv3jj" path="res://scenes/userinterface/turn_transition.tscn" id="7_ygto3"]
[ext_resource type="PackedScene" uid="uid://cxrc33gqig64w" path="res://scripts/Other/CombatVFXController.tscn" id="22_dypiu"]

[node name="Map3d2" type="Node3D"]
script = ExtResource("1_yuxmn")

[node name="TerrainGrid" type="GridMap" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
mesh_library = ExtResource("2_cx077")
cell_size = Vector3(2, 1, 2)
data = {
"cells": PackedInt32Array(-131056, 1, 3, -131057, 1, 3, -131058, 1, 3, -131059, 1, 3, -131060, 1, 3, -131061, 1, 3, -131062, 1, 3, -131064, 2, 3, -131065, 2, 3, -131066, 2, 3, -131067, 2, 3, -131068, 2, 3, -131069, 2, 3, -131070, 2, 3, -131071, 2, 3, -131072, 2, 3, -65537, 2, 3, -65538, 2, 3, -65539, 2, 3, -65541, 1, 1441793, -65540, 2, 1441793, -131063, 2, 1, -65543, 0, 3, -65542, 0, 3, -65541, 0, 1441805)
}
metadata/_editor_floor_ = Vector3(0, 3, 0)

[node name="MovementWeightsGrid" type="GridMap" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
mesh_library = ExtResource("3_ks0nw")
cell_size = Vector3(2, 1, 2)
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="OccupancyOverlay" type="GridMap" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh_library = ExtResource("3_cx077")
cell_size = Vector3(2, 1, 2)
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="TriggerOverlay" type="GridMap" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.9, 0)
mesh_library = ExtResource("4_cx077")
cell_size = Vector3(2, 1, 2)
metadata/_editor_floor_ = Vector3(0, 1, 0)

[node name="MovementOverlay" type="GridMap" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.085, 0)
mesh_library = ExtResource("4_dypiu")
cell_size = Vector3(2, 1, 2)
data = {
"cells": PackedInt32Array(1, 0, 1179649)
}
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="PathOverlay" type="GridMap" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0)
mesh_library = ExtResource("4_dypiu")
cell_size = Vector3(2, 1, 2)
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="FogOverlay" type="GridMap" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0)
mesh_library = ExtResource("4_dypiu")
cell_size = Vector3(2, 1, 2)
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.34202015, 0.9396926, 0, -0.9396926, 0.34202015, 1.250097, 15.881016, 5.8819647)
environment = ExtResource("5_yex0l")
current = true
fov = 37.849285

[node name="Cursor" type="Sprite3D" parent="."]
transform = Transform3D(5, 0, 0, 0, -2.1855695e-07, -5, 0, 5, -2.1855695e-07, -4.908, 0.06, -1.017)
visible = false
no_depth_test = true
texture_filter = 0
texture = ExtResource("6_8a3vg")
region_enabled = true
region_rect = Rect2(0, 0, 32, 32)

[node name="TurnTransition" parent="." instance=ExtResource("7_ygto3")]
mouse_filter = 2

[node name="BattleLog" type="Label" parent="."]
offset_left = 902.0
offset_top = 20.0
offset_right = 1144.0
offset_bottom = 660.0
text = "Objective: Defeat all enemies
"
autowrap_mode = 2

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("5_yex0l")

[node name="Level" type="GridMap" parent="."]
visible = false
cell_size = Vector3(2, 1, 2)
cell_center_y = false
data = {
"cells": PackedInt32Array(-131069, 5, 1441805, 0, 65535, 1048604)
}
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="Lights" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.183081, 6.232548, 0.9140688)

[node name="Lamp" type="OmniLight3D" parent="Lights"]
visible = false
light_energy = 15.602
shadow_enabled = true
omni_range = 27.256

[node name="Lamp2" type="OmniLight3D" parent="Lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 42.443085, 1.1100497, 3.0443535)
visible = false
light_energy = 15.602
shadow_enabled = true
omni_range = 27.256

[node name="Lamp3" type="OmniLight3D" parent="Lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 72.761314, 5.381786, 8.605048)
visible = false
light_energy = 15.602
shadow_enabled = true
omni_range = 27.256

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Lights"]
transform = Transform3D(0.57825536, 0.20389156, -0.7899678, 0.35330263, 0.81019, 0.467728, 0.73538977, -0.5495639, 0.39646125, 8.183081, 16.736057, -0.9140688)
shadow_enabled = true
directional_shadow_mode = 0
sky_mode = 1

[node name="OmniLight3D" type="OmniLight3D" parent="Lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 75.23863, -2.744268, -1.8749512)
visible = false
light_energy = 0.7
light_specular = 3.335

[node name="Particles" type="Node3D" parent="."]

[node name="CombatVFXController" parent="." instance=ExtResource("22_dypiu")]
